k8s/v1.37.0/clusters/dev/grafana/kubernetes-objects/virtualServiceKubernetes.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: grafana-virtual-service
  namespace: grafana
spec:
  hosts: ["grafana.maifuj.com"]
  gateways: ["istio-ingress/gateway-https"]
  http:
    - route:
        - destination:
            host: grafana-service.grafana.svc.cluster.local
            port: {number: 3000}
